# CalliopePublic

./: .gitignore  README.md  environment.yml  gurobi.env  pyproject.toml  tasks.py
calliope/: __init__.py  data.py  defaults.py  fuel_type_duid_mapping.csv  market.py  market_model.py  mpc.py  nempy_utils.py  prices.py  sac_constrained.py
calliope/envs/: __init__.py  bidstack_energy_only_env.py  bidstack_env.py  bidstack_joint_alt_env.py  bidstack_joint_altreward_env.py  bidstack_joint_env.py  bidstack_joint_fcas_env.py  bidstack_joint_reg_env.py  nempy_hist_selfschedule.py  nempy_hist_simple_env.py  nempy_hist_test_env.py  nempy_simple_fcas_env.py
calliope/forecast/: __init__.py  lstm.py
calliope/optimisation/: __init__.py  base.py  config.py  mip_energyonly.py  mip_joint.py  mip_joint_gurobi.py  mip_joint_simple.py  naming.py
notebooks/: Evaluate.ipynb  MIP_model.ipynb  analytics.ipynb  bidstack_model.ipynb  config.yml  market_model.ipynb  mpc.ipynb  nempy_simple_fcas_model.ipynb  rl_test.ipynb  testingnempy.ipynb
scripts/: bidding_data_transform.py  bidstack_checkenv.py  config.yml  config_pricemaker.yml  create_merit_order_prices.py  eval_bidstack_env.py  nempy_check_testenv.py  nempy_checkenv.py  nempy_db_download.py  nempy_dbmanager.py  rl_test.py  test_ortools.py  train_bidstack_env.py  train_bidstack_joint_env.py  train_lstm_price_forecasts.py
