[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "calliope"
version = '0.0.1'
requires-python = ">=3.11"
authors = [
  {name = "Jason P", email = "jasonpolyy@gmail.com"}
]
description = "DRL agents for NEM BESS bidding"
readme = "README.md"
classifiers = [
  "Development Status :: Alpha",
  "Programming Language :: Python"
]

#[project.scripts]
#spam-cli = "spam:main_cli"
[tool.setuptools]
py-modules = ['calliope']